# pcics

./: Cargo.toml  README.md
src/: capabilities.rs  extended_capabilities.rs  header.rs  lib.rs
src/capabilities/: accelerated_graphics_port.rs  advanced_features.rs  bridge_subsystem_vendor_id.rs  debug_port.rs  enhanced_allocation.rs  flattening_portal_bridge.rs  hypertransport.rs  message_signaled_interrups.rs  msi_x.rs  pci_express.rs  pci_x.rs  power_management_interface.rs  sata.rs  slot_identification.rs  vendor_specific.rs  vital_product_data.rs
src/extended_capabilities/: access_control_services.rs  address_translation_services.rs  advanced_error_reporting.rs  alternative_routing_id_interpolation.rs  configuration_access_correlation.rs  designated_vendor_specific_extended_capability.rs  device_serial_number.rs  downstream_port_containment.rs  dynamic_power_allocation.rs  frs_queuing.rs  l1_pm_substates.rs  latency_tolerance_reporting.rs  ln_requester.rs  multicast.rs  multifunction_virtual_channel.rs  page_request_interface.rs  pci_express_over_m_phy.rs  power_budgeting.rs  precision_time_measurement.rs  process_address_space_id.rs  protocol_multiplexing.rs  readiness_time_reporting.rs  root_complex_event_collector_endpoint_association.rs  root_complex_internal_link_control.rs  root_complex_link_declaration.rs  root_complex_register_block_header.rs  secondary_pci_express.rs  single_root_io_virtualization.rs  tph_requester.rs  vendor_specific_extended_capability.rs  vf_resizable_bar.rs  virtual_channel.rs
src/extended_capabilities/designated_vendor_specific_extended_capability/: compute_express_link.rs
src/header/: bar.rs  bridge_control.rs  cardbus_bridge_control.rs  class_code.rs  command.rs  status.rs
tests/data/device/8086:2030/: config
tests/data/device/8086:9dc8/: config
tests/data/random/: 4k
(+1 files in other folders)
