[package]
name = "pcics"
version = "0.1.1"
authors = ["mbratchikov"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pepyaka/pcics"
documentation = "https://docs.rs/pcics"
homepage = "https://github.com/pepyaka/pcics"
description = "PCI configuration space access library"
categories = ["no-std","hardware-support"]
edition = "2021"

[dependencies]
modular-bitfield = "0.11.2"
byte = "0.2.6"
displaydoc = "0.2.3"

[dev-dependencies]
pretty_assertions = "0.7"
