[package]
name = "pcics"
version = "0.1.1"
authors = ["mbratchikov"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pepyaka/pcics"
documentation = "https://docs.rs/pcics"
homepage = "https://github.com/pepyaka/pcics"
description = "PCI configuration space access library"
categories = ["hardware-support"]
edition = "2021"

[dependencies]
modular-bitfield = "0.11.2"
displaydoc = "0.2.3"
heterob = "0.2.0"
snafu = { version = "0.7.0", default-features = false, features = ["rust_1_46"] }

[dev-dependencies]
pretty_assertions = "0.7"
