[package]
name = "pcics"
version = "0.2.0"
authors = ["mbratchikov"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pepyaka/pcics"
documentation = "https://docs.rs/pcics"
homepage = "https://github.com/pepyaka/pcics"
description = "PCI configuration space access library"
categories = ["hardware-support", "no-std"]
edition = "2021"

[dependencies]
heterob = "0.2.0"
snafu = { version = "0.7.1", default-features = false, features = ["rust_1_46"] }

[dev-dependencies]
pretty_assertions = "0.7"

[features]
# capabilities/enhanced_allocation: [EnhancedAllocationEntries] next entry data
# start immediately after the previous, not from entry_size field
caps_ea_real_entry_size =[]